testsuite/tests/partial-sigs/should_fail/T12634.stderr

T12634.hs:14:19: error:
    • Found type wildcard ‘_’ standing for ‘()’
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature:
        bench_twacePow :: forall t m m' r.
                          _ => t m' r -> Bench '(t, m, m', r)

T12634.hs:14:58: error:
    • Expected a type, but
      ‘'(t, m, m', r)’ has kind
      ‘(* -> * -> *, *, *, *)’
    • In the first argument of ‘Bench’, namely ‘'(t, m, m', r)’
      In the type ‘t m' r -> Bench '(t, m, m', r)’
      In the type signature:
        bench_twacePow :: forall t m m' r.
                          _ => t m' r -> Bench '(t, m, m', r)

T12634.hs:15:18: error:
    • Couldn't match kind ‘(* -> * -> *, *, *, *)’ with ‘*’
      When matching types
        params0 :: *
        '(t, m, m', r) :: (* -> * -> *, *, *, *)
      Expected type: t m' r -> Bench '(t, m, m', r)
        Actual type: t m' r -> Bench params0
    • In the expression: bench (twacePowDec :: t m' r -> t m r)
      In an equation for ‘bench_twacePow’:
          bench_twacePow = bench (twacePowDec :: t m' r -> t m r)
    • Relevant bindings include
        bench_twacePow :: t m' r -> Bench '(t, m, m', r)
          (bound at T12634.hs:15:1)
